# apollo3

./: I2C_clock_stretch.odt  README.md
APgpio/: README.md  keywords.txt  library.properties
AnalogSpecial/: README.md
ArduinoBLE_P/: README.md  install_instructions  platform.new
ArduinoBLE_special/: README.md  install_instructions  platform.new
Artemis_filemanager/: Artemis_filemanager.ino  README.md
Artemis_microSD/: Artemis_microSD.ino  README.md
BLE_Buttons/: BLE_Buttons.ino  BLE_example_funcs.cpp  README.md  nus_main.c  svc_buttons.c  svc_buttons.h
Ios/: Apollo3_IOS.odt  README.md  keywords.txt  library.properties
MBED-BLE/: README.md  SetDebugBLE.txt  keywords.txt  library.properties
MBED-BLE/bleak-examples/Python_bleak_HR/: README.md  main.py  pyproject.toml
MLX90614_PWM/: Readme.md
MLX90614_SOFTWIRE/: README.md  library.properties
MicroSD_filemanager/: MicroSD_filemanager.ino  README.md
Modified_MLX90615/: MLX90615_m.h  README.md  SMBUS_Apollo3.odt  keywords.txt  library.properties
OneWire_on_uart/: 1-wire_uart.odt  OneWire.cpp  OneWire.h  README.md  library.json  library.properties
PowerCntrl/: DisplayPowerControl.ino  PowerCntrl.ino  deepsleep.odt
Qwicc_filemanager/: Qwicc_filemanager.ino  Qwiic_filemanager.ino  README.md
SoftwareSerial/: README.md  explained.odt  keywords.txt  library.properties
Update_Apollo3_bdaddr/: Update_Apollo3_bdaddr.ino
analog/: ap3_analog.cpp
batt_temp/: README.h  README.md  adc_batt_temp.cpp  adc_batt_temp.h  batt_temp.ino
ble_amdtp/: readme.md
ble_amdtp_arduino/: readme.md
printf/: printf.c  (+4 more)
(+455 files in other folders)
